// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HexToDecimal Component > should render a prefixed hex as a decimal with a className 1`] = `
<div>
  <div
    class="hex-to-decimal"
  >
    12345
  </div>
</div>
`;

exports[`HexToDecimal Component > should render an unprefixed hex as a decimal with a className 1`] = `
<div>
  <div
    class="hex-to-decimal"
  >
    6789
  </div>
</div>
`;
